--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-alembic==0.9.1
-click==6.7
-Flask==0.12.1
-Flask-Migrate==2.0.3
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.2
-gunicorn==19.7.1
 -e .
-itsdangerous==0.24
+Flask-Migrate==2.0.3
+Flask-SQLAlchemy==2.2
+Flask-Script==2.0.5
+Flask==0.12.1
 Jinja2==2.9.6
 Mako==1.0.6
 MarkupSafe==1.0
-python-editor==1.0.3
 SQLAlchemy==1.1.9
 Werkzeug==0.12.1
+alembic==0.9.1
+click==6.7
+coloredlogs==6.1
+gunicorn==19.7.1
+humanfriendly==2.4
+itsdangerous==0.24
+monotonic==1.3
+python-editor==1.0.3
